--- a/package.json
+++ b/package.json
@@ -1,42 +1,59 @@
 {
-  "name": "rilke-ui-workspace",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.0.2",
-    "@angular/cdk": "^12.2.12",
-    "@angular/common": "~13.0.2",
-    "@angular/compiler": "~13.0.2",
-    "@angular/core": "~13.0.2",
-    "@angular/forms": "~13.0.2",
-    "@angular/material": "^12.2.12",
-    "@angular/platform-browser": "~13.0.2",
-    "@angular/platform-browser-dynamic": "~13.0.2",
-    "@angular/router": "~13.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~13.0.2",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^13.0.7",
-    "typescript": "~4.4.4"
-  }
+	"name": "rilke-ui-workspace",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"lint": "ng lint",
+		"lint:fix": "ng lint --fix",
+		"lint:styles": "stylelint \"**/*.scss\"",
+		"lint:styles:fix": "stylelint \"**/*.scss\" --fix"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~13.0.2",
+		"@angular/cdk": "^13.0.2",
+		"@angular/common": "~13.0.2",
+		"@angular/compiler": "~13.0.2",
+		"@angular/core": "~13.0.2",
+		"@angular/forms": "~13.0.2",
+		"@angular/material": "^13.0.2",
+		"@angular/platform-browser": "~13.0.2",
+		"@angular/platform-browser-dynamic": "~13.0.2",
+		"@angular/router": "~13.0.2",
+		"rxjs": "~6.6.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-eslint/builder": "12.6.1",
+		"@angular-eslint/eslint-plugin": "12.6.1",
+		"@angular-eslint/eslint-plugin-template": "12.6.1",
+		"@angular-eslint/schematics": "12.6.1",
+		"@angular-eslint/template-parser": "12.6.1",
+		"@typescript-eslint/parser": "^5.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.2.0",
+		"eslint": "^7.26.0",
+		"eslint-plugin-import": "^2.25.2",
+		"prettier": "^2.4.1",
+		"stylelint": "^14.0.1",
+		"stylelint-config-standard": "^23.0.0",
+		"stylelint-config-standard-scss": "^2.0.0",
+		"@angular-devkit/build-angular": "~13.0.3",
+		"@angular/cli": "~13.0.3",
+		"@angular/compiler-cli": "~13.0.2",
+		"@types/jasmine": "~3.8.0",
+		"@types/node": "^12.11.1",
+		"jasmine-core": "~3.8.0",
+		"karma": "~6.3.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "~2.0.3",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "~1.7.0",
+		"ng-packagr": "^13.0.7",
+		"typescript": "~4.4.4"
+	}
 }
