--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@angular/platform-browser": "~13.0.2",
 		"@angular/platform-browser-dynamic": "~13.0.2",
 		"@angular/router": "~13.0.2",
+		"copyfiles": "^2.4.1",
 		"ngx-color": "^7.3.3",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.3.0",
