--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -1,6 +1,14 @@
 {
 	"name": "rilke-ui",
 	"version": "0.0.1",
+	"scripts": {
+		"build": "tsc -p tsconfig.schematics.json",
+		"postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../dist/rilke-ui/"
+	},
+	"schematics": "./schematics/collection.json",
+	"ng-add": {
+		"save": "dependencies"
+	},
 	"peerDependencies": {
 		"@angular/cdk": "^13.0.2",
 		"@angular/common": "^13.0.2",
@@ -10,5 +18,9 @@
 	},
 	"dependencies": {
 		"tslib": "^2.3.0"
+	},
+	"devDependencies": {
+		"copyfiles": "file:../../node_modules/copyfiles",
+		"typescript": "file:../../node_modules/typescript"
 	}
 }
