--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"ng": "ng",
 		"start": "ng serve",
 		"build": "ng build",
+		"build-npm": "ng build && cd projects/rilke-ui && tsc -p tsconfig.schematics.json && cd ../.. && cd dist/rilke-ui",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"lint": "ng lint",
