--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,11 +11,7 @@ jobs:
         with:
           node-version: 14
       - run: npm install
-      - run: npm run build
-      - run: cd projects/rilke-ui
-      - run: npm run build
-      - run: cd ../..
-      - run: cd dist/rilke-ui
+      - run: npm run build-npm
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
