--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,9 @@ jobs:
         with:
           node-version: 14
       - run: npm install
-      - run: npm run build-npm
+      - run: npm run build
+      - run: npm run build-schematics
+      - run: npm run npm-publish
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
