--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,8 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run build-schematics
-      - run: npm run npm-publish
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
           access: public
+          package: ./dist/rilke-ui/package.json
