--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -1,19 +1,24 @@
 {
 	"name": "@kantist/rilke-ui",
-	"version": "0.0.1",
-	"description": "A UI library for Rilke Architecture",
+	"version": "0.0.2",
+	"description": "Rilke UI Library",
+	"keywords": [
+		"angular",
+		"ui",
+		"material design",
+		"components",
+		"rilke",
+		"rilke architecture"
+	],
+	"license": "MIT",
 	"scripts": {
 		"build": "tsc -p tsconfig.schematics.json",
 		"postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../dist/rilke-ui/"
 	},
-	"schematics": "./schematics/collection.json",
-	"ng-add": {
-		"save": "dependencies"
-	},
 	"peerDependencies": {
-		"@angular/cdk": "^13.0.2",
-		"@angular/common": "^13.0.2",
-		"@angular/core": "^13.0.2",
+		"@angular/cdk": "13.0.2",
+		"@angular/core": "^13.0.0 || ^14.0.0-0",
+		"@angular/common": "^13.0.0 || ^14.0.0-0",
 		"@angular/material": "^13.0.2",
 		"ngx-color": "^7.3.3"
 	},
@@ -23,5 +28,7 @@
 	"devDependencies": {
 		"copyfiles": "file:../../node_modules/copyfiles",
 		"typescript": "file:../../node_modules/typescript"
-	}
+	},
+	"schematics": "./schematics/collection.json",
+	"ng-add": {}
 }
