--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kantist/rilke-ui",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "Rilke UI Library",
 	"keywords": [
 		"angular",
@@ -16,14 +16,14 @@
 		"postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../dist/rilke-ui/"
 	},
 	"peerDependencies": {
-		"@angular/cdk": "13.0.2",
+		"@angular/cdk": "^13.0.2",
 		"@angular/core": "^13.0.0 || ^14.0.0-0",
 		"@angular/common": "^13.0.0 || ^14.0.0-0",
-		"@angular/material": "^13.0.2",
-		"ngx-color": "^7.3.3"
+		"@angular/material": "^13.0.2"
 	},
 	"dependencies": {
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"ngx-color": "^7.3.3"
 	},
 	"devDependencies": {
 		"copyfiles": "file:../../node_modules/copyfiles",
