--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kantist/rilke-ui",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "Rilke UI Library",
 	"keywords": [
 		"angular",
@@ -19,13 +19,17 @@
 		"@angular/cdk": "^13.0.2",
 		"@angular/core": "^13.0.0 || ^14.0.0-0",
 		"@angular/common": "^13.0.0 || ^14.0.0-0",
-		"@angular/material": "^13.0.2"
-	},
-	"dependencies": {
-		"tslib": "^2.3.0",
-		"ngx-color": "^7.3.3"
+		"@angular/material": "^13.0.2",
+		"ngx-color": "^7.3.3",
+		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
+		"@angular/cdk": "^13.0.2",
+		"@angular/core": "^13.0.0 || ^14.0.0-0",
+		"@angular/common": "^13.0.0 || ^14.0.0-0",
+		"@angular/material": "^13.0.2",
+		"ngx-color": "^7.3.3",
+		"tslib": "^2.3.0",
 		"copyfiles": "file:../../node_modules/copyfiles",
 		"typescript": "file:../../node_modules/typescript"
 	},
