--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "ng build",
 		"build-schematics": "cd projects/rilke-ui && npm run build",
 		"watch": "ng build --watch --configuration development",
+		"bundle-scss": "bundle-scss --config",
 		"test": "ng test",
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
@@ -44,6 +45,7 @@
 		"@types/node": "^12.11.1",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
+		"bundle-scss": "^1.5.1",
 		"eslint": "^7.26.0",
 		"eslint-plugin-import": "^2.25.2",
 		"jasmine-core": "~3.8.0",
