--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -15,7 +15,7 @@
 		"build": "tsc -p tsconfig.schematics.json",
 		"postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../dist/rilke-ui/ && copyfiles -f src/scss/** ../../dist/rilke-ui/schematics/ng-add/files"
 	},
-	"dependencies": {
+	"peerDependencies": {
 		"@angular/cdk": "^13.0.2",
 		"@angular/core": "^13.0.0 || ^14.0.0-0",
 		"@angular/common": "^13.0.0 || ^14.0.0-0",
