--- a/projects/rilke-ui/package.json
+++ b/projects/rilke-ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@kantist/rilke-ui",
-	"version": "0.0.23",
+	"version": "0.0.24",
 	"description": "Rilke UI Library",
 	"keywords": [
 		"angular",
@@ -15,20 +15,19 @@
 		"build": "tsc -p tsconfig.schematics.json",
 		"postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../dist/rilke-ui/ && copyfiles -f src/scss/** ../../dist/rilke-ui/schematics/ng-add/files"
 	},
-	"peerDependencies": {
+	"dependencies": {
 		"@angular/cdk": "^13.0.2",
+		"@angular/material": "^13.0.2",
+		"ngx-color": "^7.3.3"
+	},
+	"peerDependencies": {
 		"@angular/core": "^13.0.0 || ^14.0.0-0",
 		"@angular/common": "^13.0.0 || ^14.0.0-0",
-		"@angular/material": "^13.0.2",
-		"ngx-color": "^7.3.3",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@angular/cdk": "^13.0.2",
 		"@angular/core": "^13.0.0 || ^14.0.0-0",
 		"@angular/common": "^13.0.0 || ^14.0.0-0",
-		"@angular/material": "^13.0.2",
-		"ngx-color": "^7.3.3",
 		"tslib": "^2.3.0",
 		"copyfiles": "file:../../node_modules/copyfiles",
 		"typescript": "file:../../node_modules/typescript"
