--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,16 @@
 {
 	"root": true,
-	"extends": [
-	],
+	"extends": [],
 	"parserOptions": {
 		"ecmaVersion": 2020,
 		"sourceType": "module"
 	},
-	"rules": {
-	},
+	"rules": {},
 	"overrides": [
 		{
-			"files": [
-				"*.ts"
-			],
+			"files": ["*.ts"],
 			"parserOptions": {
-				"project": [
-					"tsconfig.json"
-				],
+				"project": ["tsconfig.json"],
 				"createDefaultProgram": true
 			},
 			"extends": [
@@ -82,20 +76,18 @@
 				"import/newline-after-import": "error",
 				"import/no-absolute-path": "error",
 				"import/no-duplicates": "error",
-				"import/no-extraneous-dependencies": ["off", { "devDependencies": false }],
+				"import/no-extraneous-dependencies": [
+					"off",
+					{ "devDependencies": false }
+				],
 				"import/no-unassigned-import": "off",
 				"import/order": "off"
 			}
 		},
 		{
-			"files": [
-				"*.html"
-			],
-			"extends": [
-				"plugin:@angular-eslint/template/recommended"
-			],
-			"rules": {
-			}
+			"files": ["*.html"],
+			"extends": ["plugin:@angular-eslint/template/recommended"],
+			"rules": {}
 		}
 	]
 }
