--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,7 +9,11 @@
 		"no-descending-specificity": null,
 		"number-leading-zero": null,
 		"selector-pseudo-element-no-unknown": null,
-		"color-hex-case": "upper",
-		"no-empty-source": null
+		"color-hex-case": null,
+		"no-empty-source": null,
+		"alpha-value-notation": null,
+		"selector-type-no-unknown": null,
+		"no-duplicate-selectors": null,
+		"scss/double-slash-comment-empty-line-before": null
 	}
 }
